--- a/Resources/Private/Partials/Tag/Properties.html
+++ b/Resources/Private/Partials/Tag/Properties.html
@@ -1,11 +1,4 @@
-
-<table class="tx-pg-blog" >
-	<tr>
-		<td>
-			<f:translate key="tx_pgblog_domain_model_tag.name" />
-		</td>
-		<td>
-		{tag.name}
-		</td>
-	</tr>
-</table>
+<div>
+	<f:for each="{tags}" as="tag">
+	</f:for>
+</div>
