--- a/Resources/Private/Templates/Tag/Show.html
+++ b/Resources/Private/Templates/Tag/Show.html
@@ -13,7 +13,7 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="main">
-<h1>Single View for Tag</h1>
+<h1>{tag.name}</h1>
 
 <f:flashMessages />
 <f:render partial="Tag/Properties" arguments="{tag:tag}" />
