--- a/Resources/Private/Templates/Category/Show.html
+++ b/Resources/Private/Templates/Category/Show.html
@@ -15,7 +15,31 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:section name="main">
 
 <f:flashMessages />
-<f:render partial="Category/Properties" arguments="{category:category}" />
+<div class="row">
+	<f:render partial="Category/Properties" arguments="{category:category}" />
+</div>
+<div class="row">
+	<h3>Posts dans cette catégorie : </h3>
+		<f:for each="{posts}" as="post">
+			<div class="post panel panel-default col-md-6">
+				<div class="panel-body">
+					<div class="row">
+						<f:link.action action="show" arguments="{post : post}"> {post.title}</f:link.action> 
+						(<f:format.date date="{post.publicationDate}" format="d M Y" />)
+					</div>
+					<div class="row">
+						<div class="col-md-3">
+							<f:image src="{post.image.originalResource.publicUrl}" width="100"/>
+						</div>
+					</div>
+					<div class="row">
+						<p>{post.summary}</p>
+					</div>
+				</div>
+			</div>
+		</f:for>
+	</div>
+
 <div class="row">
 	<div class="col-md-2">
 		<f:link.action action="list" class="btn btn-default">Back to list</f:link.action><br />
@@ -24,4 +48,5 @@ Otherwise your changes will be overwritten the next time you save the extension 
 		<f:link.action action="new" class="btn btn-default">New Category</f:link.action>
 	</div>
 </div>
+
 </f:section>
