--- a/Resources/Private/Templates/Post/List.html
+++ b/Resources/Private/Templates/Post/List.html
@@ -27,7 +27,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 						(<f:format.date date="{post.publicationDate}" format="d M Y" />)
 					</div>
 					<div class="row">
-						<div class="col-md-offset-3 col-md-3">
+						<div class="col-md-3">
 							<f:image src="{post.image.originalResource.publicUrl}" width="100"/>
 						</div>
 					</div>
