2e modif liste des posts

--- a/Resources/Private/Templates/Post/List.html
+++ b/Resources/Private/Templates/Post/List.html
@@ -27,7 +27,9 @@ Otherwise your changes will be overwritten the next time you save the extension 
 						(<f:format.date date="{post.publicationDate}" format="d M Y" />)
 					</div>
 					<div class="row">
-						<f:image src="{post.image.originalResource.publicUrl}" width="100"/>
+						<div class="col-md-offset-3 col-md-3">
+							<f:image src="{post.image.originalResource.publicUrl}" width="100"/>
+						</div>
 					</div>
 					<div class="row">
 						<p>{post.summary}</p>
