--- a/Resources/Private/Templates/Post/List.html
+++ b/Resources/Private/Templates/Post/List.html
@@ -20,26 +20,8 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:widget.paginate objects="{posts}" as="paginatedPosts" configuration="{itemsPerPage: 4, insertAbove: 1, insertBelow: 1, maximumNumberOfLinks: 5}">
 	<div class="row">
 		<f:for each="{paginatedPosts}" as="post">
-			<div class="post panel panel-default col-md-6">
-				<div class="panel-body">
-					<div class="row">
-						<f:link.action action="show" arguments="{post : post}"> {post.title}</f:link.action> 
-						(<f:format.date date="{post.publicationDate}" format="d M Y" />)
-					</div>
-					<div class="row">
-						<div class="col-md-offset-3 col-md-3">
-							<f:image src="{post.image.originalResource.publicUrl}" width="100"/>
-						</div>
-					</div>
-					<div class="row">
-						<p>{post.summary}</p>
-					</div>
-				</div>
-			</div>
+			<f:render partial="Post/Card" arguments="{post:post}" />
 		</f:for>
 	</div>
 </f:widget.paginate>
-<div class="row">
-	<f:link.action action="new" class="btn btn-default">New Post</f:link.action>
-</div>
 </f:section>
