--- a/Resources/Private/Templates/Author/List.html
+++ b/Resources/Private/Templates/Author/List.html
@@ -5,10 +5,10 @@ This Template is responsible for creating a table of domain objects.
 
 If you modify this template, do not forget to change the overwrite settings
 in /Configuration/ExtensionBuilder/settings.yaml:
-  Resources:
-    Private:
-      Templates:
-        List.html: keep
+Resources:
+Private:
+Templates:
+List.html: keep
 
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
@@ -18,15 +18,18 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:flashMessages />
 
 <div class="row">
-<f:for each="{authors}" as="author">
+	<f:for each="{authors}" as="author">
 	<div class="author panel panel-default col-md-4">
 		<div class="panel-body">
 			<div class="row">
-				<f:image src="{author.image.originalResource.publicUrl}" width="100"/>
-				<f:link.action action="show" arguments="{author : author}"> {author.username}</f:link.action>
-
-
-				 <p>({author.firstName} {author.lastName})</p>
+				<div class="col-md-6">
+					<f:image src="{author.image.originalResource.publicUrl}" width="100"/>
+				</div>
+				<div class="col-md-6">
+					<h4><f:link.action action="show" arguments="{author : author}"> {author.username}</f:link.action>
+					</h4>
+					<p>({author.firstName} {author.lastName})</p>
+				</div>
 			</div>
 			<div class="row">
 				<p>{author.presentation}</p>
@@ -34,8 +37,5 @@ Otherwise your changes will be overwritten the next time you save the extension 
 		</div>
 	</div>
 </f:for>
-</div>
-<div class="row">
-	<f:link.action action="new" class="btn btn-default">New Author</f:link.action>
 </div>
 </f:section>
