--- a/Resources/Private/Templates/Tag/Show.html
+++ b/Resources/Private/Templates/Tag/Show.html
@@ -4,10 +4,10 @@ This Template is responsible for displaying a single view for a domain object
 
 If you modify this template, do not forget to change the overwrite settings
 in /Configuration/ExtensionBuilder/settings.yaml:
-	Resources:
-		Private:
-			Templates:
-				Show.html: keep
+Resources:
+Private:
+Templates:
+Show.html: keep
 
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
@@ -20,32 +20,12 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <div class="row">
 	<h3>Posts associés à ce tag : </h3>
 	<f:for each="{posts}" as="post">
-	<div class="post panel panel-default col-md-6">
-		<div class="panel-body">
-			<div class="row">
-				<f:link.action action="show" arguments="{post : post}"> {post.title}</f:link.action> 
-				(<f:format.date date="{post.publicationDate}" format="d M Y" />)
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<f:image src="{post.image.originalResource.publicUrl}" width="100"/>
-				</div>
-			</div>
-			<div class="row">
-				<p>{post.summary}</p>
-			</div>
-		</div>
-	</div>
-</f:for>
+		<f:render partial="Post/Card" arguments="{post:post}" />
+	</f:for>
 </div>
 
 <div class="row">
-	<div class="col-md-2">
-		<f:link.action action="list">Back to list</f:link.action><br />
-	</div>
-	<div class="col-md-2">
-		<f:link.action action="new">New Tag</f:link.action>
-	</div>
+	<f:link.action class="btn btn-default" action="list">Back to list</f:link.action><br />
 </div>
 
 </f:section>
