--- a/Resources/Private/Partials/Post/Card.html
+++ b/Resources/Private/Partials/Post/Card.html
@@ -1,7 +1,7 @@
 <div class="post panel panel-default col-md-6">
 	<div class="panel-body">
 		<div class="row">
-			<f:link.action pageUid="12" action="show" controller="PostController" arguments="{post : post}"> {post.title}</f:link.action> 
+			<f:link.action pageUid="12" action="show" controller="Post" arguments="{post : post}"> {post.title}</f:link.action> 
 			(<f:format.date date="{post.publicationDate}" format="d M Y" />)
 		</div>
 		<div class="row">
