--- a/Resources/Private/Partials/Post/Properties.html
+++ b/Resources/Private/Partials/Post/Properties.html
@@ -12,3 +12,42 @@
 <div class="row">
 	{post.content}
 </div>
+
+<div class="row lists">
+
+	<div class="panel panel-default col-md-6">
+		<div class="panel-heading">
+			<h3 class="panel-title">Catégories</h3>
+		</div>
+		<div class="panel-body">
+			<ul class="taglist">
+				<f:for each="{post.categories}" as="category">
+					<li>
+						<div class="tag orange">
+							{category.name}
+						</div>
+					</li>
+				</f:for>
+			</ul>
+		</div>
+	</div>
+
+	<div class="panel panel-default col-md-6">
+		<div class="panel-heading">
+			<h3 class="panel-title">Tags</h3>
+		</div>
+		<div class="panel-body">
+			<ul class="taglist">
+				<f:for each="{post.tags}" as="tag">
+					<li>
+						<div class="tag teal">
+							{tag.name}
+						</div>
+					</li>
+				</f:for>
+			</ul>
+		</div>
+	</div>
+	
+</div>
+
